force-app/main/default/objects/vlocity_ins__CalculationProcedureVersion__c/fields/vlocity_ins__CalculationProcedureId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CalculationProcedureId__c</fullName>
    <label>Calculation Procedure</label>
    <referenceTo>vlocity_ins__CalculationProcedure__c</referenceTo>
    <relationshipLabel>Vlocity Calculation Procedure Versions</relationshipLabel>
    <relationshipName>PricingProcedureVersions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>