force-app/main/default/objects/vlocity_ins__CalculationProcedureVersion__c/fields/vlocity_ins__Constants__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Constants__c</fullName>
    <label>Constants</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>