force-app/main/default/objects/vlocity_ins__CalculationProcedureVersion__c/fields/vlocity_ins__InputBundleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InputBundleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Input DataMapper Bundle</label>
    <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
    <relationshipLabel>Vlocity Calculation Procedure Versions</relationshipLabel>
    <relationshipName>VlocityCalculationProcedureVersions</relationshipName>
    <type>Lookup</type>
</CustomField>