force-app/main/default/objects/vlocity_ins__CalculationProcedureVersion__c/fields/vlocity_ins__InputDataRaptorBundleName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InputDataRaptorBundleName__c</fullName>
    <formula>vlocity_ins__InputBundleId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Input DataMapper Bundle Name</label>
    <type>Text</type>
</CustomField>