force-app/main/default/objects/vlocity_ins__CalculationProcedureVersion__c/fields/vlocity_ins__OutputBundleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OutputBundleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Output DataMapper Bundle</label>
    <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
    <relationshipLabel>Vlocity Calculation Procedure Versions (Output DataMapper Bundle)</relationshipLabel>
    <relationshipName>VlocityCalculationProcedureVersions1</relationshipName>
    <type>Lookup</type>
</CustomField>