force-app/main/default/objects/vlocity_ins__CalculationProcedureVersion__c/fields/vlocity_ins__OutputDataRaptorBundleName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OutputDataRaptorBundleName__c</fullName>
    <formula>vlocity_ins__OutputBundleId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Output DataMapper Bundle Name</label>
    <type>Text</type>
</CustomField>